# rust-projet-ppm

./: Cargo.toml  readme.md
bencher/: lib.rs
benches/: ppm_bench_test.rs
src/: build.rs  lib.rs  lib_for_py.rs  main.rs
src/lib_c/: ppma_io.c  ppma_io.h
src/srcPy/: main.py
