[package]
name = "ppm"
version = "0.0.0"
authors = ["Lin Dixuan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords = ["benchmark"]
categories = ["development-tools::profiling", "rust-patterns"]
build = "src/build.rs"

[dependencies]
libc = "0.2.0"
bencher = { path = "./bencher" }


[build-dependencies]
cc = "1.0"

[package.metadata.release]
no-dev-version = true

[[bin]]
name = "ppm"
path = "src/main.rs"

[lib]
name = "ppm"
path = "src/lib.rs"
doctest = false
bench = true

[[bench]]
name = "benchers"
path = "benches/ppm_bench_test.rs"
harness = false


